--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,8 +8,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <div class="">
-      <a href="logo.png"></a> <h2><%= link_to "Dinnder", root_path %></h2>
+      <div class="row">
+      <h2><%= image_tag('logo.png', class: "minimizer")%><%= link_to "Dinnder", root_path %></h2>
       </div>
     </div>
 
