--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,9 +1,7 @@
-<div class="text-center"><%= image_tag('logo.png', class: "small") %><h1 class="font-plus"><strong>Dinnder</strong></h1></div>
+<h2 class="transparent">YELP SEARCH</h2>
+<%= render partial: 'layouts/nav' %>
 
-<div class="text-center">
-<a href="/signup" class="btn btn-warning pull-center" >Sign Up</a>
-<a href="/login" class="btn btn-primary pull-center">Log In</a>
-</div>
+
 
 <div class="">
   <div class="scroller pull-center">
