adding favorites now

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,18 +16,25 @@
  *= require slick-theme
  */
 
-
+.nav-style{
+  background-color:#2563AB;
+}
 
 .img_edit{
   border-radius: 50%;
   width: 400px;
   height: 400px;
   margin: 25px;
-  box-shadow: 0 0 30px 1px rgba(0,0,0,0.4);
+  box-shadow: 0 0 30px 1px rgba(0,0,0,0.5);
+}
+
+.img_s{
+  width: 50%;
+  height: 50%;
 }
 
 .img_edit:hover{
-  box-shadow: 0 0 70px 2px rgba(255,50,50,0.5);
+  box-shadow: 0 0 40px 1px rgba(255,50,50,0.5);
 
 }
 
@@ -36,8 +43,8 @@
 }
 
 .minimizer{
-  width: 2.5%;
-  height: 2.5%;
+  width: 3%;
+  height: 3%;
 }
 
 .small{
@@ -53,8 +60,9 @@
   font-size: 5em;
 }
 
+
+
 body{
-  background-color:#2563AB;
   font-family: 'Open Sans Condensed', sans-serif;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
