--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,14 @@
 </head>
 <body>
 
+<% if @current_user %>
+<%= render partial: 'layouts/nav' %>
+<% else %>
+<% end %>
+
 
 <div class="container">
+
 
 
 <%= yield %>
