--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,42 +1,25 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar nav-style navbar-default">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <div class="row">
-      <% if @current_user %>
-        <h2><%= image_tag('logo.png', class: "minimizer")%><%= link_to "Dinnder", main_path %></h2>
-      <% else %>
-        <h2><%= image_tag('logo.png', class: "minimizer")%><%= link_to "Dinnder", root_path %></h2>
-      <% end %>
+      <div>
+        <div class="well">
+          <% if @current_user %>
+            <%= image_tag('logo.png', class: "minimizer")%><%= link_to "Dinnder", main_path %>
+          <% else %>
+            <%= image_tag('logo.png', class: "minimizer")%><%= link_to "Dinnder", root_path %>
+          <% end %>
+          <div class="pull-right">
+
+            <% if @current_user %>
+              <%= @current_user.display_name %>
+              <%= link_to "",logout_path, class: "glyphicon glyphicon-remove" %>
+            <% else %>
+              <li><a href="/signup" class="btn btn-warning" >Sign Up</a></li>
+              <li><a href="/login" class="btn btn-primary">Log In</a></li>
+            <% end %>
+          </div>
+        </div>
       </div>
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-
-
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <% if @current_user %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @current_user.display_name %> <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-
-              <li><%= link_to "Log out",logout_path %></a></li>
-            </ul>
-          </li>
-        <% else %>
-          <li><a href="/signup" class="btn btn-warning" >Sign Up</a></li>
-          <li><a href="/login" class="btn btn-primary">Log In</a></li>
-        <% end %>
-      </ul>
-    </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
