--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,27 +1,41 @@
-<%= render partial: 'layouts/nav' %>
 
 <div>
   <div class="pull-left text-center">
-    <h1><strong><%= @place.name %></strong></h1><br>
+    <hr>
+    <h1 class=""><strong><%= @place.name %></strong></h1><br>
+    <b>
+    <%= image_tag "https://s3-media3.fl.yelpcdn.com/assets/srv0/developer_pages/2d7ab232224f/assets/img/yelp_logo_100x50.png"%>
+    </b><br>
+    <%= image_tag @place.rating_img_url_large %><br>
+    <div><%= @place.review_count %> Reviews</div>
     <%= image_tag(@place.image_url.gsub!("ms.jpg","l.jpg"), class: "img_edit") %>
+
     <hr>
   </div>
-    <%= image_tag "https://s3-media3.fl.yelpcdn.com/assets/srv0/developer_pages/2d7ab232224f/assets/img/yelp_logo_100x50.png"%><br>
-    <%= image_tag @place.rating_img_url_large %><br>
 
+  <div>
+  <h3 class="pull-right col-xs-4 col-sm-4 col-md-4 col-lg-4">
   <hr>
-  <h3 class="col-xs-4 col-sm-4 col-md-4 col-lg-4 pull-right">
-  <%= @place.location.address[0] %><br><br>
-
-  <% @place.categories.each do |i| %>
-  <li><%= i[0] %></li>
-  <% end%>
-  <%#= @place.snippet_text %><br>
-
+  <b>Location:</b><br><%= @place.location.address[0] %><br>
+  <%= @place.location.neighborhoods[0] %>,
+  <%= @place.location.city %>
+  <br>
+  <br>
+  <b>Styles:</b><% @place.categories.each do |i| %>
+  <i><li><%= i[0] %></li></i>
+  <% end%><br>
   <%= @place.display_phone %><br>
-  <a href="#"><%= link_to "Back", root_path, class: "btn btn-primary pull-bottom btn-xs glyphicon glyphicon-chevron-left" %></a>
+  <a href="#">
+    <%= link_to "Back", main_path, class: "btn btn-primary btn-xs glyphicon glyphicon-chevron-left" %>
+  </a>
   <hr>
+  <b>
+    <%= image_tag "https://s3-media3.fl.yelpcdn.com/assets/srv0/developer_pages/2d7ab232224f/assets/img/yelp_logo_100x50.png"%>
+    <%#= image_tag @place.reviews.user.image_url %><br>
+  </b>
+<div name="" id="input" class="well"><p><%= @place.snippet_text %><p></div>
   </h3>
+  </div>
 </div>
 
 
