heroku early deploy

--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,2 +1,12 @@
 <h1>Favorites#index</h1>
 <p>Find me in app/views/favorites/index.html.erb</p>
+
+<% @favorites.each do |i| %>
+<%= i.place_id %>
+<%= @current_user.display_name %>
+
+
+<% end %>
+
+
+
