--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,9 +15,16 @@
  *= require slick
  *= require slick-theme
  */
+.divider{
+  width: 100px;
+  height: 100px;
+  border-right: dotted #2563AB 3px;
+  border-left: dotted #2563AB 3px;
+}
 
 .nav-style{
-  background-color:#2563AB;
+  background-color:#74BEFF;
+  border-bottom: dotted #2563AB 3px;
 }
 
 .img_edit{
@@ -43,8 +50,8 @@
 }
 
 .minimizer{
-  width: 4%;
-  height: 4%;
+  width: 5%;
+  height: 5%;
 }
 
 .small{
@@ -65,7 +72,23 @@
   font-size: 5em;
 }
 
+.nav-font-size{
+  font-size: 4em;
+  position: relative;
+  top: 5px;
 
+}
+
+.nav-position{
+  position: relative;
+  top: 20.5px;
+
+}
+
+.logo-position{
+  position: relative;
+  top: -12px;
+}
 
 body{
   font-family: 'Open Sans Condensed', sans-serif;
