--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,26 +1,31 @@
 <nav class="navbar nav-style navbar-default">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <div>
-        <div class="well">
-          <% if @current_user %>
-            <%= image_tag('logo.png', class: "minimizer")%><%= link_to "Dinnder", main_path %>
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <% if @current_user %>
+            <%= image_tag('logo.png', class: "minimizer logo-position")%><span class="nav-font-size pull-center">Dinnder</span>
           <% else %>
             <%= image_tag('logo.png', class: "minimizer")%><%= link_to "Dinnder", root_path %>
           <% end %>
-          <div class="pull-right">
+          <div class="pull-right nav-position">
+    <!-- Collect the nav links, forms, and other content for toggling -->
 
-            <% if @current_user %>
-              <%= @current_user.display_name %><br>
-              <%= link_to "My Favorites", favorites_path, class: "" %><br>
-              <%= link_to "Logout",logout_path, class: "" %>
-            <% else %>
-              <li><a href="/signup" class="btn btn-warning" >Sign Up</a></li>
-              <li><a href="/login" class="btn btn-primary">Log In</a></li>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
+      <ul class="nav navbar-nav nav-position navbar-right">
+        <li>
+          <% if @current_user %>
+          <% else %>
+          <%= link_to "Dinnder", root_path %>
+          <% end %>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @current_user.display_name %><span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Home", main_path, class: "btn-primary" %></li>
+            <li><%= link_to "My Favorites", favorites_path, class: "btn-success" %></li>
+            <li role="separator" class="divider"></li>
+            <li><%= link_to "Logout",logout_path, class: "" %></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
