--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -27,8 +27,10 @@
   <%= @place.display_phone %><br>
   <a href="#">
     <%= link_to "Back", main_path, class: "btn btn-primary btn-xs glyphicon glyphicon-chevron-left" %>
-    <%= @current_user.favorites.find place_id %>
+
     <%= link_to "Favorite", favorite_path(@place.id), class: "btn btn-success btn-xs glyphicon glyphicon-plus" %>
+    <%= link_to "Delete", unfavorite_path, class: "btn btn-danger btn-xs glyphicon glyphicon-remove" %></span>
+
   </a>
   <hr>
   <b>
