--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,11 +16,20 @@
           <%= link_to "Dinnder", root_path %>
           <% end %>
         </li>
+
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @current_user.display_name %><span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Home", main_path, class: "btn-primary" %></li>
             <li><%= link_to "My Favorites", favorites_path, class: "btn-success" %></li>
+            <li>
+          <%= bootstrap_form_tag url: search_path do |f| %>
+          <%= f.text_field :q, label: "Search by Cusine Style" %>
+          <%= f.primary "Search" %>
+          <% end %>
+
+            </li>
             <li role="separator" class="divider"></li>
             <li><%= link_to "Logout",logout_path, class: "" %></li>
           </ul>
