--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 <head>
   <title>DinApp</title>
   <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" media="screen" href="style.css">
   <!-- <link rel="stylesheet" media="screen" href="https://bootswatch.com/paper/bootstrap.css"> -->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
   <script src="//code.jquery.com/jquery.js"></script>
