--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,37 +1,36 @@
-<nav class="navbar nav-style navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <% if @current_user %>
-            <%= image_tag('logo.png', class: "minimizer logo-position")%><span class="nav-font-size pull-center">Dinnder</span>
-          <% else %>
-            <%= image_tag('logo.png', class: "minimizer")%><%= link_to "Dinnder", root_path %>
-          <% end %>
-          <div class="pull-right nav-position">
-    <!-- Collect the nav links, forms, and other content for toggling -->
 
-      <ul class="nav navbar-nav nav-position navbar-right">
-        <li>
-          <% if @current_user %>
-          <% else %>
-          <%= link_to "Dinnder", root_path %>
+<nav class="navbar nav-style btn-info active navbar-default">
+  <div class="container-fluid">
+
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header nav-font-size">
+    Dinnder<%= image_tag('logo.png', class: "")%>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+      <p class="navbar-brand nav-search-margin text-white">Because food is more fun.</p>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+      <ul class="nav navbar-nav navbar-right nav-search-margin">
+        <li class="pull-left navbar-form btn-primary btn-padder">
+          <%= bootstrap_form_tag url: search_path do |f| %>
+          <%= f.text_field :q, hide_label: true, placeholder: "Search by category" %>
+          <% f.primary "Search" %>
           <% end %>
         </li>
-
-
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @current_user.display_name %><span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><%= link_to "Home", main_path, class: "btn-primary" %></li>
+          <a href="#" class="dropdown-toggle drop-font-size" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= @current_user.display_name %><span class="caret"></span></a>
+          <ul class="dropdown-menu drop-font-size">
+            <li><%= link_to "Home", main_path, class: "btn-info" %></li>
             <li><%= link_to "My Favorites", favorites_path, class: "btn-success" %></li>
-            <li>
-          <%= bootstrap_form_tag url: search_path do |f| %>
-          <%= f.text_field :q, label: "Search by Cusine Style" %>
-          <%= f.primary "Search" %>
-          <% end %>
-
-            </li>
             <li role="separator" class="divider"></li>
-            <li><%= link_to "Logout",logout_path, class: "" %></li>
+            <li><%= link_to "Logout",logout_path, class: "btn-warning" %></li>
           </ul>
         </li>
       </ul>
