--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,39 +1,44 @@
 
 <div>
-  <div class="pull-left text-center">
+  <div class="pull-left col-xs-6 col-sm-6 col-md-6 col-lg-6 btn-info active text-center">
+    <h1 class=""><strong><%= @place.name %></strong><br>
     <hr>
-    <h1 class=""><strong><%= @place.name %></strong></h1><br>
     <b>
     <%= image_tag "https://s3-media3.fl.yelpcdn.com/assets/srv0/developer_pages/2d7ab232224f/assets/img/yelp_logo_100x50.png"%>
     </b><br>
     <%= image_tag @place.rating_img_url_large %><br>
     <div><%= @place.review_count %> Reviews</div>
+    <a href="#">
+      <%= link_to "Back", main_path, class: "btn btn-primary btn-xs glyphicon glyphicon-chevron-left" %>
+      <%= link_to "Favorite", favorite_path(@place.id), class: "btn btn-success btn-xs glyphicon glyphicon-plus" %>
+    </a>
     <%= image_tag(@place.image_url.gsub!("ms.jpg","l.jpg"), class: "img_edit") %>
     <hr>
+    </h1>
   </div>
-  <div>
-  <h3 class="pull-right col-xs-4 col-sm-4 col-md-4 col-lg-4">
-  <hr>
-  <b>Location:</b><br><%= @place.location.address[0] %><br>
-  <%= @place.location.neighborhoods[0] %>,
-  <%= @place.location.city %>
-  <br>
-  <br>
-  <b>Styles:</b><% @place.categories.each do |i| %>
-  <i><li><%= i[0] %></li></i>
-  <% end%><br>
-  <%= @place.display_phone %><br>
-  <a href="#">
-    <%= link_to "Back", main_path, class: "btn btn-primary btn-xs glyphicon glyphicon-chevron-left" %>
-    <%= link_to "Favorite", favorite_path(@place.id), class: "btn btn-success btn-xs glyphicon glyphicon-plus" %>
-  </a>
-  <hr>
-  <b>
-    <%= image_tag "https://s3-media3.fl.yelpcdn.com/assets/srv0/developer_pages/2d7ab232224f/assets/img/yelp_logo_100x50.png"%>
-    <%#= image_tag @place.reviews.user.image_url %><br>
-  </b>
-<div name="" id="input" class="well"><p><%= @place.snippet_text %><p></div>
-  </h3>
+  <div class="">
+    <div class="btn-info active  pull-right col-xs-4 col-sm-4 col-md-4 col-lg-4">
+    <h1 class="">Info</h1>
+    <hr>
+    <h3>
+    <b>Location:
+    </b><br><%= @place.location.address[0] %><br>
+    <%= @place.location.neighborhoods[0] %>,
+    <%= @place.location.city %>
+    <br>
+    <br>
+    <b>Styles:</b><% @place.categories.each do |i| %>
+    <i><li><%= i[0] %></li></i>
+    <% end%><br>
+    <%= @place.display_phone %><br>
+    <b>
+      <%= image_tag "https://s3-media3.fl.yelpcdn.com/assets/srv0/developer_pages/2d7ab232224f/assets/img/yelp_logo_100x50.png"%>
+      <%#= image_tag @place.reviews.user.image_url %><br>
+    </b>
+    <div name="" id="input" class="well active btn-primary"><p><%= @place.snippet_text %></p></div>
+    <hr>
+    </h3>
+    </div>
   </div>
 </div>
 
