--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -110,7 +110,7 @@
 }
 
 body{
-  background-image: url('app/assets/images/background.png');
+  background-image: url('https://scontent-sea1-1.xx.fbcdn.net/hphotos-xtp1/t31.0-8/11792017_1669770766588093_7278343843106231900_o.jpg');
   background-size: 100% auto;
   font-family: 'Open Sans Condensed', sans-serif;
   -webkit-touch-callout: none;
