--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -18,7 +18,7 @@
   </div>
   <div class="">
     <div class="btn-info active  pull-right col-xs-4 col-sm-4 col-md-4 col-lg-4">
-    <h1 class="">Info</h1>
+    <h1 class="text-center">Info</h1>
     <hr>
     <h3>
     <b>Location:
