--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -20,7 +20,7 @@
       <ul class="nav navbar-nav navbar-right nav-search-margin">
         <li class="pull-left navbar-form btn-primary btn-padder">
           <%= bootstrap_form_tag url: search_path do |f| %>
-          <%= f.text_field :q, hide_label: true, placeholder: "Search by category" %>
+          <%= f.text_field :q, hide_label: true, class: "glyphicon glyphicon-user" %>
           <% f.primary "Search" %>
           <% end %>
         </li>
