--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -3,8 +3,8 @@
   <div class="container-fluid">
 
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header nav-font-size">
-    Dinnder<%= image_tag('logo.png', class: "")%>
+    <div class="navbar-header nav-font-size"><a class="nav-head-text" href="/main">
+    Dinnder<%= image_tag('logo.png', class: "")%></a>
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -12,7 +12,7 @@
         <span class="icon-bar"></span>
       </button>
     </div>
-      <p class="navbar-brand nav-search-margin text-white">Because food.</p>
+      <p class="navbar-brand nav-search-margin text-orange">Because food.</p>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
