--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -9,8 +9,8 @@
     <%= image_tag @place.rating_img_url_large %><br>
     <div><%= @place.review_count %> Reviews</div>
     <a href="#">
-      <%= link_to "Back", main_path, class: "btn btn-primary btn-xs glyphicon glyphicon-chevron-left" %>
-      <%= link_to "Favorite", favorite_path(@place.id), class: "btn btn-success btn-xs glyphicon glyphicon-plus" %>
+      <%= link_to "Back", main_path, class: "btn btn-primary glyphicon glyphicon-chevron-left" %>
+      <%= link_to "Favorite", favorite_path(@place.id), class: "btn btn-success glyphicon glyphicon-plus" %>
     </a>
     <%= image_tag(@place.image_url.gsub!("ms.jpg","l.jpg"), class: "img_edit") %>
     <hr>
@@ -34,7 +34,8 @@
     <%= @place.display_phone %><br>
     <b>
       <%= image_tag "https://s3-media3.fl.yelpcdn.com/assets/srv0/developer_pages/2d7ab232224f/assets/img/yelp_logo_100x50.png"%>
-      <%#= @place.reservation_url %><br>
+      Quick Review:
+      <%#= @place.reservation_url %>
     </b>
 
     <div name="" id="input" class="well active btn-primary"><p><%= @place.snippet_text %></p></div>
