--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,11 +3,11 @@
 <div class="text-center"><%= link_to "Go!", main_path, class: "btn btn-success" %>
 <% else %>
 
-<div class="text-center"><%= image_tag('logo.png', class: "small") %><h1 class="font-plus"><strong>Dinnder</strong></h1></div>
+<div class="text-center btn-info disabled"><%= image_tag('logo.png', class: "small") %><h1 class="font-plus"><strong>Dinnder</strong></h1><p class="btn-primary disabled">See what you want to eat.</p></div>
 
 <div class="text-center">
-<a href="/signup" class="btn btn-warning pull-center" >Sign Up</a>
-<a href="/login" class="btn btn-primary pull-center">Log In</a>
+<a href="/signup" class="btn btn-info pull-center" >Sign Up</a>
+<a href="/login" class="btn btn-success pull-center">Log In</a>
 <% end %>
 </div>
 
