--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 <div class="text-center"><%= link_to "Go!", main_path, class: "btn btn-success" %>
 <% else %>
 
-<div class="text-center btn-info disabled"><%= image_tag('logo.png', class: "small") %><h1 class="font-plus"><strong>Dinnder</strong></h1><p class="btn-primary disabled">See what you want to eat.</p></div>
+<div class="text-center home-rounder btn-info disabled"><%= image_tag('logo.png', class: "small") %><h1 class="font-plus"><strong>Dinnder</strong></h1><p class="btn-primary btn-padder disabled">See what you want to eat.</p></div>
 
 <div class="text-center">
 <a href="/signup" class="btn btn-info pull-center" >Sign Up</a>
