--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
         <%= f.text_field :email, hide_label: true, placeholder: "Email" %>
         <%= f.text_field :name, hide_label: true, placeholder: "Username" %>
         <%= f.password_field :password, hide_label: true, placeholder: "Password" %>
-        <%= f.submit "∆ Join Now", class: "btn btn-warning" %>
+        <%= f.submit "Join Now", class: "btn btn-warning" %>
         <%= link_to "« Back", root_path, class: "btn btn-info" %>
 
 
