--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,11 +1,12 @@
 
 <div>
   <div class="pull-left col-xs-6 col-sm-6 col-md-6 col-lg-6 btn-info active text-center">
-    <h1 class=""><strong><a href="<%= @place.url %>"><%= @place.name %></a></strong><br>
+    <h1 class="">
+    <strong><a href="<%= @place.url %>"><%= image_tag 'https://lh4.ggpht.com/F0F4Z965uf3psiHu5h77e-8o-Yla68BEaJI8xLfK-V3JkMK4yQv1WLqqZQCwYhDevKoa=w300', class: "minimizer" %><%= @place.name %></a></strong><br>
     <hr>
     <b>
     <%= image_tag "https://s3-media3.fl.yelpcdn.com/assets/srv0/developer_pages/2d7ab232224f/assets/img/yelp_logo_100x50.png"%>
-    </b><br>
+    Rating:</b><br>
     <%= image_tag @place.rating_img_url_large %><br>
     <div><%= @place.review_count %> Reviews</div>
     <a href="#">
@@ -18,7 +19,7 @@
   </div>
   <div class="">
     <div class="btn-info active  pull-right col-xs-4 col-sm-4 col-md-4 col-lg-4">
-    <h1 class="text-center">Info</h1>
+    <h1 class="text-center text-orange"><b>Info</b></h1>
     <hr>
     <h3>
     <b>Location:
@@ -31,14 +32,14 @@
     <i><li><%= i[0] %></li></i>
     <% end%><br>
     <b>Contact:</b><br>
-    <%= @place.display_phone %><br>
+    <%= @place.display_phone %><br><br>
     <b>
       <%= image_tag "https://s3-media3.fl.yelpcdn.com/assets/srv0/developer_pages/2d7ab232224f/assets/img/yelp_logo_100x50.png"%>
-      Quick Review:
+      Quick Review:<br><br>
       <%#= @place.reservation_url %>
     </b>
 
-    <div name="" id="input" class="well active btn-primary"><p><%= @place.snippet_text %></p></div>
+    <div name="" id="input" class="well  active btn-primary"><p><%= @place.snippet_text %></p></div>
     <hr>
     </h3>
     </div>
