--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -1,15 +1,15 @@
 <div class="btn-info btn-padder active">
-    <h1 class="text-center">About</h1>
+    <h1 class="text-center"><b>About</b></h1>
     <hr>
     <h3 class="text-center">
     <b><i>Dinnder</i></b> is a <b><i>Seattle</i></b> based resturant finder.<br><br>
 
         <b><i>Dinnder</i></b> enables you to use Yelp to find what you want to eat by image first.<br><br>
 
-        On the home screen use the left and right buttons to scroll through<br>
-        the top 40 resturants in <b><i>Seattle</i></b>, and click to select one that entices your appetite.<br><br>
+        On your Home page, use the left and right buttons to scroll through<br>
+        the top resturants in <b><i>Seattle</i></b>, and click to select one that entices your appetite.<br><br>
 
-        You can use the seach form to speficfy what you're hungry for,<br>
+        You can use the seach form to specify what you're hungry for,<br>
         i.e. "Asian food", "Japanese", "bento".
     <div class="text-center nav-search-margin"><%= link_to "Go!", main_path, class: "btn btn-lg btn-success" %>
 
