--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,10 +1,13 @@
-<div class=""><h2 class="text-center disabled btn-primary btn-padder">Click to find deliciousness!</h2>
-  <div class="scroller pull-center">
-  <% @search.businesses.each do |f| %>
-      <a href="/show/<%= f.id %>"><%= image_tag(f.image_url.gsub!("ms.jpg","l.jpg"), :class => "img_edit centerize") %></a>
-  <% end %>
-  <% @search1.businesses.each do |f| %>
-    <a href="/show/<%= f.id %>"><%= image_tag(f.image_url.gsub!("ms.jpg","l.jpg"), :class => "img_edit centerize" ) %></a>
-  <% end %>
+<div class="main-scroll">
+  <h2 class="text-center disabled btn-primary btn-padder">Click to find deliciousness!</h2>
+  <span id="spanArrow"></span>
+
+  <div class="scroller">
+    <% @search.businesses.each do |f| %>
+        <a href="/show/<%= f.id %>"><%= image_tag(f.image_url.gsub!("ms.jpg","l.jpg"), :class => "img_edit centerize") %></a>
+    <% end %>
+    <% @search1.businesses.each do |f| %>
+      <a href="/show/<%= f.id %>"><%= image_tag(f.image_url.gsub!("ms.jpg","l.jpg"), :class => "img_edit centerize" ) %></a>
+    <% end %>
   </div>
 </div>
