--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,24 +1,21 @@
-
 <% if @current_user %>
 <div class="text-center"><%= link_to "Go!", main_path, class: "btn btn-success" %>
-<% else %>
-
-<div class="text-center home-rounder btn-info disabled"><%= image_tag('logo.png', class: "small") %><h1 class="font-plus"><strong>Dinnder</strong></h1><p class="btn-primary btn-padder disabled">See what you want to eat.</p></div>
-
-<div class="text-center">
-<a href="/signup" class="btn btn-info pull-center" >Sign Up</a>
-<a href="/login" class="btn btn-success pull-center">Log In</a>
-<% end %>
-</div>
-
-<div class="">
-  <div class="scroller-no-click pull-center">
-  <% @search.businesses.each do |f| %>
-      <a href="#"><%= image_tag(f.image_url.gsub!("ms.jpg","l.jpg"), :class => "img_edit centerize") %></a>
-  <% end %>
-  <% @search1.businesses.each do |f| %>
-    <a href="#"><%= image_tag(f.image_url.gsub!("ms.jpg","l.jpg"), :class => "img_edit centerize" ) %></a>
-  <% end %>
-  <hr>
-  </div>
-</div>
+    <% else %>
+    <div class="text-center home-rounder btn-info disabled"><%= image_tag('http://users.ininet.hu/retroboys/img/etlap.png', class: "small") %><h1 class="font-plus"><strong>Dinnder</strong></h1><p class="btn-primary btn-padder disabled">See what you want to eat.</p>
+    <div class="text-center">
+        <a href="/signup" class="btn btn-primary pull-center" >Sign Up</a>
+        <a href="/login" class="btn btn-success pull-center">Log In</a>
+        <% end %><br>
+    </div>
+    </div>
+    <div class="">
+        <div class="scroller-no-click pull-center">
+            <% @search.businesses.each do |f| %>
+            <a href="#"><%= image_tag(f.image_url.gsub!("ms.jpg","l.jpg"), :class => "img_edit centerize") %></a>
+            <% end %>
+            <% @search1.businesses.each do |f| %>
+            <a href="#"><%= image_tag(f.image_url.gsub!("ms.jpg","l.jpg"), :class => "img_edit centerize" ) %></a>
+            <% end %>
+            <hr>
+        </div>
+    </div>
